<resources>
    <string name="app_name">BitcoinTracker</string>
    <string name="bitcoin_price_label">Bitcoin Price</string>
    <string name="loading_price">로딩 중...</string>
    <string name="time_1d">1D</string>
    <string name="time_5d">5D</string>
    <string name="time_1m">1M</string>
    <string name="time_6m">6M</string>
    <string name="time_1y">1Y</string>
    <string name="time_all">ALL</string>
    <string name="retry">재시도</string>
    <string name="show_prediction_button_text">오늘의 종가 예측 보기</string>
    <string name="title_activity_prediction">오늘의 종가 예측 결과</string>
    <string name="prediction_loading">예측 값을 계산 중입니다...</string>
    <string name="prediction_failed">예측 값을 가져오는데 실패했습니다.</string>
    <string name="krw_currency_symbol">₩</string>
    <string name="exchange_rate_unavailable">(환율 정보 없음)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>